--- a/Product_Recommendation_Engine.ipynb
+++ b/Product_Recommendation_Engine.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "105-aTKDcpJzJpTfnlMt42XEdhi_0Ybwy",
-      "authorship_tag": "ABX9TyMULA4+lMJqeDsYmqus8JiZ",
+      "authorship_tag": "ABX9TyPcPkri2cMHM3DBstgBsiZ+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,7 +76,7 @@
           "height": 204
         },
         "id": "hWzKqCzvQ5do",
-        "outputId": "1f93feaa-5eda-49a6-ff45-fccf8748b8fb"
+        "outputId": "7c3e73c0-bf56-4b3d-c75e-9e91e823fc55"
       },
       "source": [
         "amazon_ratings = pd.read_csv('/content/drive/MyDrive/Capstone Project/ Cap Pro 4 - Unsupervised Machine Learning/Product Recommendation Engine/Data/ratings_Beauty.csv')\n",
@@ -174,7 +174,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qAK7SjfiRF1f",
-        "outputId": "96572669-5f68-4d7f-cf02-fac9d5421989"
+        "outputId": "ca6b15a7-c09c-447f-8883-541c50dcd9a5"
       },
       "source": [
         "amazon_ratings.shape"
@@ -201,7 +201,7 @@
           "height": 390
         },
         "id": "4TKJNWq7RLsD",
-        "outputId": "171b2c9b-88a4-4e7a-d55a-6ac6e5e5e5e9"
+        "outputId": "402ddfd5-f626-49e0-9666-76c917afa76f"
       },
       "source": [
         "popular_products = pd.DataFrame(amazon_ratings.groupby('ProductId')['Rating'].count())\n",
@@ -312,7 +312,7 @@
           "height": 360
         },
         "id": "hlIPdluzROvS",
-        "outputId": "c27b2a10-e1a0-4805-e199-b71f9482d3c9"
+        "outputId": "9fa69bf6-2b37-4f01-8ba2-2f90ad5f0e97"
       },
       "source": [
         "most_popular.head(30).plot(kind = \"bar\")"
@@ -323,7 +323,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f3e09aafad0>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7fafbb055790>"
             ]
           },
           "metadata": {},
@@ -389,7 +389,7 @@
           "height": 284
         },
         "id": "JkMKeH_TRY2_",
-        "outputId": "777dbc42-9e34-4b74-e354-3c5f622376d4"
+        "outputId": "9158d773-46c8-419f-801f-bf7f9f0dbc6a"
       },
       "source": [
         "ratings_utility_matrix = amazon_ratings1.pivot_table(values='Rating', index='UserId', columns='ProductId', fill_value=0)\n",
@@ -1045,7 +1045,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tPL4hevDRf-E",
-        "outputId": "5487b9b0-56c0-4339-dec1-579af8636d1f"
+        "outputId": "94bac3be-f565-499b-9359-ac6a5de7d683"
       },
       "source": [
         "ratings_utility_matrix.shape"
@@ -1081,13 +1081,13 @@
           "height": 284
         },
         "id": "SQW94MzqRiFF",
-        "outputId": "f3d56270-5a8b-4815-c173-410c1286e297"
+        "outputId": "1b346f56-ae28-4226-fc2e-4279b1adb6b4"
       },
       "source": [
         "X = ratings_utility_matrix.T\n",
         "X.head()"
       ],
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1717,7 +1717,126 @@
             ]
           },
           "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mrHGupnO8tno",
+        "outputId": "68d79a3c-0517-4451-e861-1b688112d736"
+      },
+      "source": [
+        "X.shape"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(886, 9697)"
+            ]
+          },
+          "metadata": {},
           "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "t7qA8c6t8vbH"
+      },
+      "source": [
+        "Unique products in subset of data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TvothntN8xwO"
+      },
+      "source": [
+        "X1 = X"
+      ],
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rSNOuVRt80xv"
+      },
+      "source": [
+        "**Decomposing the Matrix**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fyfaSrZ382pw",
+        "outputId": "eb9959b0-7ef7-4851-b87e-599b204a49f2"
+      },
+      "source": [
+        "SVD = TruncatedSVD(n_components=10)\n",
+        "decomposed_matrix = SVD.fit_transform(X)\n",
+        "decomposed_matrix.shape"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(886, 10)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QKT8VH5_87jI"
+      },
+      "source": [
+        "**Correlation Matrix**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RJkhVywQ80Li",
+        "outputId": "4cf2b053-32f2-491f-9c0e-c93bdda241cd"
+      },
+      "source": [
+        "correlation_matrix = np.corrcoef(decomposed_matrix)\n",
+        "correlation_matrix.shape"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(886, 886)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
         }
       ]
     }
