--- a/Product_Recommendation_Engine.ipynb
+++ b/Product_Recommendation_Engine.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "105-aTKDcpJzJpTfnlMt42XEdhi_0Ybwy",
-      "authorship_tag": "ABX9TyPcPkri2cMHM3DBstgBsiZ+",
+      "authorship_tag": "ABX9TyOjvqgIxkisCxm6R4EC61YC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,7 +76,7 @@
           "height": 204
         },
         "id": "hWzKqCzvQ5do",
-        "outputId": "7c3e73c0-bf56-4b3d-c75e-9e91e823fc55"
+        "outputId": "1869916b-2c81-41c1-c1f3-7ea726195f4d"
       },
       "source": [
         "amazon_ratings = pd.read_csv('/content/drive/MyDrive/Capstone Project/ Cap Pro 4 - Unsupervised Machine Learning/Product Recommendation Engine/Data/ratings_Beauty.csv')\n",
@@ -174,7 +174,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qAK7SjfiRF1f",
-        "outputId": "ca6b15a7-c09c-447f-8883-541c50dcd9a5"
+        "outputId": "6d0e92aa-636e-4f3c-f808-da7d2b783467"
       },
       "source": [
         "amazon_ratings.shape"
@@ -201,7 +201,7 @@
           "height": 390
         },
         "id": "4TKJNWq7RLsD",
-        "outputId": "402ddfd5-f626-49e0-9666-76c917afa76f"
+        "outputId": "5756b0b3-e0a0-4f5b-e732-37af8844180f"
       },
       "source": [
         "popular_products = pd.DataFrame(amazon_ratings.groupby('ProductId')['Rating'].count())\n",
@@ -312,7 +312,7 @@
           "height": 360
         },
         "id": "hlIPdluzROvS",
-        "outputId": "9fa69bf6-2b37-4f01-8ba2-2f90ad5f0e97"
+        "outputId": "0da5ab77-45ee-44a5-be1e-9c2604f194ef"
       },
       "source": [
         "most_popular.head(30).plot(kind = \"bar\")"
@@ -323,7 +323,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7fafbb055790>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7fa136ae2150>"
             ]
           },
           "metadata": {},
@@ -389,7 +389,7 @@
           "height": 284
         },
         "id": "JkMKeH_TRY2_",
-        "outputId": "9158d773-46c8-419f-801f-bf7f9f0dbc6a"
+        "outputId": "b04af8ef-6af2-44e7-f9bf-5acc149e6845"
       },
       "source": [
         "ratings_utility_matrix = amazon_ratings1.pivot_table(values='Rating', index='UserId', columns='ProductId', fill_value=0)\n",
@@ -1045,7 +1045,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tPL4hevDRf-E",
-        "outputId": "94bac3be-f565-499b-9359-ac6a5de7d683"
+        "outputId": "c2e24d98-ce29-4deb-c2cc-0da5cb333464"
       },
       "source": [
         "ratings_utility_matrix.shape"
@@ -1081,7 +1081,7 @@
           "height": 284
         },
         "id": "SQW94MzqRiFF",
-        "outputId": "1b346f56-ae28-4226-fc2e-4279b1adb6b4"
+        "outputId": "e603bf59-daf6-4050-d6a0-528f7e46ad75"
       },
       "source": [
         "X = ratings_utility_matrix.T\n",
@@ -1728,7 +1728,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mrHGupnO8tno",
-        "outputId": "68d79a3c-0517-4451-e861-1b688112d736"
+        "outputId": "d06f18aa-01fb-402a-b505-45e98575abda"
       },
       "source": [
         "X.shape"
@@ -1783,7 +1783,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fyfaSrZ382pw",
-        "outputId": "eb9959b0-7ef7-4851-b87e-599b204a49f2"
+        "outputId": "f8dba4f0-70fc-4c1e-f5fc-7f9a44edbee2"
       },
       "source": [
         "SVD = TruncatedSVD(n_components=10)\n",
@@ -1820,7 +1820,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RJkhVywQ80Li",
-        "outputId": "4cf2b053-32f2-491f-9c0e-c93bdda241cd"
+        "outputId": "441390e6-8a19-4ea9-8b5f-422da010d628"
       },
       "source": [
         "correlation_matrix = np.corrcoef(decomposed_matrix)\n",
@@ -1839,6 +1839,117 @@
           "execution_count": 13
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9jl9l7VZS9w1"
+      },
+      "source": [
+        "**Isolating Product ID # 6117036094 from the Correlation Matrix**\n",
+        "\n",
+        "Assuming the customer buys Product ID # 6117036094 (randomly chosen)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "df7Pz4ZTS_tB",
+        "outputId": "b1d1d61d-85c4-448d-e8e4-f61442a9d496"
+      },
+      "source": [
+        "X.index[99]"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'6117036094'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "s34n7ndpTBXR"
+      },
+      "source": [
+        "Index # of product ID purchased by customer"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iYs4xprsTD0M",
+        "outputId": "a9124a34-2265-4954-b98d-7ee4d60d9a4b"
+      },
+      "source": [
+        "i = \"6117036094\"\n",
+        "\n",
+        "product_names = list(X.index)\n",
+        "product_ID = product_names.index(i)\n",
+        "product_ID"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "99"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3BUIxPTfTIke"
+      },
+      "source": [
+        "Correlation for all items with the item purchased by this customer based on items rated by other customers people who bought the same product"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "biFShzukTLHw"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UEOLZoW3TFur"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 15,
+      "outputs": []
     }
   ]
 }
