--- a/Product_Recommendation_Engine.ipynb
+++ b/Product_Recommendation_Engine.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "105-aTKDcpJzJpTfnlMt42XEdhi_0Ybwy",
-      "authorship_tag": "ABX9TyOjvqgIxkisCxm6R4EC61YC",
+      "authorship_tag": "ABX9TyNlh3JQnTJVyr43k5JayQK+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,7 +76,7 @@
           "height": 204
         },
         "id": "hWzKqCzvQ5do",
-        "outputId": "1869916b-2c81-41c1-c1f3-7ea726195f4d"
+        "outputId": "a30ac330-484d-4245-a0ae-2fd6e76c4150"
       },
       "source": [
         "amazon_ratings = pd.read_csv('/content/drive/MyDrive/Capstone Project/ Cap Pro 4 - Unsupervised Machine Learning/Product Recommendation Engine/Data/ratings_Beauty.csv')\n",
@@ -174,7 +174,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qAK7SjfiRF1f",
-        "outputId": "6d0e92aa-636e-4f3c-f808-da7d2b783467"
+        "outputId": "ba0edcf5-4362-40ac-ade1-1455bdbcc18f"
       },
       "source": [
         "amazon_ratings.shape"
@@ -201,7 +201,7 @@
           "height": 390
         },
         "id": "4TKJNWq7RLsD",
-        "outputId": "5756b0b3-e0a0-4f5b-e732-37af8844180f"
+        "outputId": "22a9c15a-7ca6-463a-d0c7-54667cc154ad"
       },
       "source": [
         "popular_products = pd.DataFrame(amazon_ratings.groupby('ProductId')['Rating'].count())\n",
@@ -312,7 +312,7 @@
           "height": 360
         },
         "id": "hlIPdluzROvS",
-        "outputId": "0da5ab77-45ee-44a5-be1e-9c2604f194ef"
+        "outputId": "fac8bcd8-c459-4773-de86-ccdce1101f91"
       },
       "source": [
         "most_popular.head(30).plot(kind = \"bar\")"
@@ -323,7 +323,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7fa136ae2150>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f480d4a93d0>"
             ]
           },
           "metadata": {},
@@ -389,7 +389,7 @@
           "height": 284
         },
         "id": "JkMKeH_TRY2_",
-        "outputId": "b04af8ef-6af2-44e7-f9bf-5acc149e6845"
+        "outputId": "c781165c-1be7-456f-db4f-dbb47f6cd6e9"
       },
       "source": [
         "ratings_utility_matrix = amazon_ratings1.pivot_table(values='Rating', index='UserId', columns='ProductId', fill_value=0)\n",
@@ -1045,7 +1045,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tPL4hevDRf-E",
-        "outputId": "c2e24d98-ce29-4deb-c2cc-0da5cb333464"
+        "outputId": "65b77501-c272-4944-a769-119e6576ce48"
       },
       "source": [
         "ratings_utility_matrix.shape"
@@ -1081,7 +1081,7 @@
           "height": 284
         },
         "id": "SQW94MzqRiFF",
-        "outputId": "e603bf59-daf6-4050-d6a0-528f7e46ad75"
+        "outputId": "d303472d-1225-4080-f21e-633d8dea993a"
       },
       "source": [
         "X = ratings_utility_matrix.T\n",
@@ -1728,7 +1728,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mrHGupnO8tno",
-        "outputId": "d06f18aa-01fb-402a-b505-45e98575abda"
+        "outputId": "47c36de2-ee6d-4a9c-b8f4-29804d512c43"
       },
       "source": [
         "X.shape"
@@ -1783,7 +1783,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fyfaSrZ382pw",
-        "outputId": "f8dba4f0-70fc-4c1e-f5fc-7f9a44edbee2"
+        "outputId": "7c9aa3ed-e8b6-4ffe-8b7d-41a86cfcacff"
       },
       "source": [
         "SVD = TruncatedSVD(n_components=10)\n",
@@ -1820,7 +1820,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RJkhVywQ80Li",
-        "outputId": "441390e6-8a19-4ea9-8b5f-422da010d628"
+        "outputId": "84173fa7-0dc8-475e-d471-a299f8ce3d8d"
       },
       "source": [
         "correlation_matrix = np.corrcoef(decomposed_matrix)\n",
@@ -1859,7 +1859,7 @@
           "height": 35
         },
         "id": "df7Pz4ZTS_tB",
-        "outputId": "b1d1d61d-85c4-448d-e8e4-f61442a9d496"
+        "outputId": "9d02b443-05bd-4155-897f-347866797e26"
       },
       "source": [
         "X.index[99]"
@@ -1897,7 +1897,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iYs4xprsTD0M",
-        "outputId": "a9124a34-2265-4954-b98d-7ee4d60d9a4b"
+        "outputId": "f00b5ce7-832f-4d4d-a613-5353ae4aebc1"
       },
       "source": [
         "i = \"6117036094\"\n",
@@ -1932,13 +1932,38 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "biFShzukTLHw"
+        "id": "biFShzukTLHw",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b27a0286-7b01-419e-ae68-50ace448890d"
       },
       "source": [
-        ""
+        "correlation_product_ID = correlation_matrix[product_ID]\n",
+        "correlation_product_ID.shape"
       ],
-      "execution_count": 15,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(886,)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hIMF9zlPdjc0"
+      },
+      "source": [
+        "**Recommending top 10 highly correlated products in sequence**"
+      ]
     },
     {
       "cell_type": "code",
@@ -1948,7 +1973,7 @@
       "source": [
         ""
       ],
-      "execution_count": 15,
+      "execution_count": 16,
       "outputs": []
     }
   ]
